zecn.zecn change to pp.ecn

--- a/pp-s4apps01/zecn/webapp/test/flpSandbox.html
+++ b/pp-s4apps01/zecn/webapp/test/flpSandbox.html
@@ -44,10 +44,10 @@
                 }
             },
             applications: {
-                "zecnzecn-tile": {
+                "ppzecn-tile": {
                     title: "ECNレポート",
                     description: "ECNレポート",
-                    additionalInformation: "SAPUI5.Component=zecn.zecn",
+                    additionalInformation: "SAPUI5.Component=pp.zecn",
                     applicationType: "URL",
                     url: "../"
                 }
@@ -65,7 +65,7 @@
         data-sap-ui-theme="sap_horizon"
         data-sap-ui-compatVersion="edge"
         data-sap-ui-language="en"
-        data-sap-ui-resourceroots='{"zecn.zecn": "../"}'
+        data-sap-ui-resourceroots='{"pp.zecn": "../"}'
         data-sap-ui-frameOptions="allow"
         data-sap-ui-flexibilityServices='[{"connector": "LocalStorageConnector"}]'>
     </script>
