--- a/pp-s4apps01/zecn/webapp/index.html
+++ b/pp-s4apps01/zecn/webapp/index.html
@@ -15,7 +15,7 @@
         src="resources/sap-ui-core.js"
         data-sap-ui-theme="sap_horizon"
         data-sap-ui-resourceroots='{
-            "zecn.zecn": "./"
+            "pp.zecn": "./"
         }'
         data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
         data-sap-ui-compatVersion="edge"
@@ -26,9 +26,9 @@
 <body class="sapUiBody sapUiSizeCompact" id="content">
     <div
         data-sap-ui-component
-        data-name="zecn.zecn"
+        data-name="pp.zecn"
         data-id="container"
-        data-settings='{"id" : "zecn.zecn"}'
+        data-settings='{"id" : "pp.zecn"}'
         data-handle-validation="true"
     ></div>
 </body>
