BI003 add namespace

--- a/bi-s4apps01/recoverymanagement/webapp/index.html
+++ b/bi-s4apps01/recoverymanagement/webapp/index.html
@@ -15,7 +15,7 @@
         src="resources/sap-ui-core.js"
         data-sap-ui-theme="sap_horizon"
         data-sap-ui-resourceroots='{
-            "recoverymanagement": "./"
+            "bi.recoverymanagement": "./"
         }'
         data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
         data-sap-ui-compatVersion="edge"
@@ -26,9 +26,9 @@
 <body class="sapUiBody sapUiSizeCompact" id="content">
     <div
         data-sap-ui-component
-        data-name="recoverymanagement"
+        data-name="bi.recoverymanagement"
         data-id="container"
-        data-settings='{"id" : "recoverymanagement"}'
+        data-settings='{"id" : "bi.recoverymanagement"}'
         data-handle-validation="true"
     ></div>
 </body>
