--- a/bi-s4apps01/recoverymanagement/webapp/test/flpSandbox.html
+++ b/bi-s4apps01/recoverymanagement/webapp/test/flpSandbox.html
@@ -44,10 +44,10 @@
                 }
             },
             applications: {
-                "recoverymanagement-display": {
+                "birecoverymanagement-display": {
                     title: "Recovery Management",
                     description: "Recovery Management",
-                    additionalInformation: "SAPUI5.Component=recoverymanagement",
+                    additionalInformation: "SAPUI5.Component=bi.recoverymanagement",
                     applicationType: "URL",
                     url: "../"
                 }
@@ -65,7 +65,7 @@
         data-sap-ui-theme="sap_horizon"
         data-sap-ui-compatVersion="edge"
         data-sap-ui-language="en"
-        data-sap-ui-resourceroots='{"recoverymanagement": "../"}'
+        data-sap-ui-resourceroots='{"bi.recoverymanagement": "../"}'
         data-sap-ui-frameOptions="allow"
         data-sap-ui-flexibilityServices='[{"connector": "LocalStorageConnector"}]'>
     </script>
