--- a/bi-s4apps01/recoverymanagement/webapp/test/integration/opaTests.qunit.html
+++ b/bi-s4apps01/recoverymanagement/webapp/test/integration/opaTests.qunit.html
@@ -9,7 +9,7 @@
 		src="../../resources/sap-ui-core.js"
 		data-sap-ui-theme="sap_horizon"
 		data-sap-ui-resourceroots='{
-			"recoverymanagement": "../../",
+			"bi.recoverymanagement": "../../",
 			"integration": "./"
 		}'
 		data-sap-ui-animation="false"
