--- a/bi-s4apps01/recoverymanagement/webapp/test/testsuite.qunit.html
+++ b/bi-s4apps01/recoverymanagement/webapp/test/testsuite.qunit.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            QUnit test suite for recoverymanagement
+            QUnit test suite for bi.recoverymanagement
         </title>
         <script src="../resources/sap/ui/qunit/qunit-redirect.js"></script>
         <script src="testsuite.qunit.js" data-sap-ui-testsuite></script>
