--- a/bi-s4apps01/recoverymanagement/webapp/test/unit/unitTests.qunit.html
+++ b/bi-s4apps01/recoverymanagement/webapp/test/unit/unitTests.qunit.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Unit tests for recoverymanagement</title>
+	<title>Unit tests for bi.recoverymanagement</title>
 	<script
 		id="sap-ui-bootstrap"
 		src="../../resources/sap-ui-core.js"
 		data-sap-ui-resourceroots='{
-			"recoverymanagement": "../../",
+			"bi/recoverymanagement": "../../",
 			"unit": "."
 		}'
 		data-sap-ui-async="true"
