MM-020 add namespace

--- a/mm-s4apps01/poposting/webapp/test/flpSandbox.html
+++ b/mm-s4apps01/poposting/webapp/test/flpSandbox.html
@@ -44,10 +44,10 @@
                 }
             },
             applications: {
-                "poposting-display": {
+                "mmpoposting-display": {
                     title: "PO Goods Receive",
                     description: "PO Goods Receive",
-                    additionalInformation: "SAPUI5.Component=poposting",
+                    additionalInformation: "SAPUI5.Component=mm.poposting",
                     applicationType: "URL",
                     url: "../"
                 }
@@ -65,7 +65,7 @@
         data-sap-ui-theme="sap_horizon"
         data-sap-ui-compatVersion="edge"
         data-sap-ui-language="en"
-        data-sap-ui-resourceroots='{"poposting": "../"}'
+        data-sap-ui-resourceroots='{"mm.poposting": "../"}'
         data-sap-ui-frameOptions="allow"
         data-sap-ui-flexibilityServices='[{"connector": "LocalStorageConnector"}]'>
     </script>
