--- a/mm-s4apps01/poposting/webapp/test/testsuite.qunit.html
+++ b/mm-s4apps01/poposting/webapp/test/testsuite.qunit.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            QUnit test suite for poposting
+            QUnit test suite for mm.poposting
         </title>
         <script src="../resources/sap/ui/qunit/qunit-redirect.js"></script>
         <script src="testsuite.qunit.js" data-sap-ui-testsuite></script>
