--- a/mm-s4apps01/poposting/webapp/test/unit/unitTests.qunit.html
+++ b/mm-s4apps01/poposting/webapp/test/unit/unitTests.qunit.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Unit tests for poposting</title>
+	<title>Unit tests for mm.poposting</title>
 	<script
 		id="sap-ui-bootstrap"
 		src="../../resources/sap-ui-core.js"
 		data-sap-ui-resourceroots='{
-			"poposting": "../../",
+			"mm/poposting": "../../",
 			"unit": "."
 		}'
 		data-sap-ui-async="true"
