--- a/mm-s4apps01/podataanalysis/webapp/test/flpSandbox.html
+++ b/mm-s4apps01/podataanalysis/webapp/test/flpSandbox.html
@@ -44,7 +44,7 @@
                 }
             },
             applications: {
-                "mmpodataanalysis-tile": {
+                "mmpodataanalysis-display": {
                     title: "PO Data Analysis",
                     description: "PO Data Analysis",
                     additionalInformation: "SAPUI5.Component=mm.podataanalysis",
@@ -59,7 +59,7 @@
     <!-- Bootstrap the UI5 core library. 'data-sap-ui-frameOptions="allow"'' is a NON-SECURE setting for test environments -->
     <script id="sap-ui-bootstrap"
         src="../resources/sap-ui-core.js"
-        data-sap-ui-libs="sap.m,sap.ui.core,sap.fe.templates,sap.ushell"
+        data-sap-ui-libs="sap.m,sap.ui.core,sap.ushell"
         data-sap-ui-async="true"
         data-sap-ui-preload="async"
         data-sap-ui-theme="sap_horizon"
