--- a/mm-s4apps01/podataanalysis/webapp/test/unit/unitTests.qunit.html
+++ b/mm-s4apps01/podataanalysis/webapp/test/unit/unitTests.qunit.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8" />
-	<title>Integration tests for Basic Template</title>
-
+	<meta charset="utf-8">
+	<title>Unit tests for mm.podataanalysis</title>
 	<script
 		id="sap-ui-bootstrap"
 		src="../../resources/sap-ui-core.js"
-		data-sap-ui-theme="sap_horizon"
 		data-sap-ui-resourceroots='{
-			"mm.podataanalysis": "../../",
-			"integration": "./"
+			"mm/podataanalysis": "../../",
+			"unit": "."
 		}'
-		data-sap-ui-animation="false"
-		data-sap-ui-compatVersion="edge"
 		data-sap-ui-async="true"
-		data-sap-ui-preload="async">
+		data-sap-ui-compat-version="edge">
 	</script>
 	<link rel="stylesheet" type="text/css" href="../../resources/sap/ui/thirdparty/qunit-2.css">
 	<script src="../../resources/sap/ui/thirdparty/qunit-2.js"></script>
 	<script src="../../resources/sap/ui/qunit/qunit-junit.js"></script>
-	<script src="opaTests.qunit.js"></script>
+	<script src="../../resources/sap/ui/qunit/qunit-coverage.js"></script>
+	<script src="../../resources/sap/ui/thirdparty/sinon.js"></script>
+	<script src="../../resources/sap/ui/thirdparty/sinon-qunit.js"></script>
+	<script src="unitTests.qunit.js"></script>
 </head>
 <body>
 	<div id="qunit"></div>
